--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "convert": "node code/main.js",
     "demo": "node code/test.js"
   },
-  "keywords": ["git", "javascript", "emoji", "converter", "tp", "formation"],
+  "keywords": [
+    "git",
+    "javascript",
+    "emoji",
+    "converter",
+    "tp",
+    "formation"
+  ],
   "author": "Baptiste VASSEUR",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.12.2"
+  },
   "devDependencies": {}
 }
